--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -3,8 +3,7 @@ on:
   pull_request:
     branches:
     - master
-  schedule:
-  - cron: 1 2 ** 1
+
 jobs:
 
   build:
@@ -12,7 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        go-version: [1.12.9, 1.13]
+        go-version: [1.12, 1.13]
         os: [ubuntu-latest, macos-latest, windows-latest]
     
     steps:
@@ -32,5 +31,5 @@ jobs:
     - name: Build
       run: go build -v .
       
-    - test: Test
+    - name: Test
       run: go test ./...
